bouncing and bounds checking fixed. added random colors (from stackoverflow)

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,5 @@ body {
 .box {
 	height: 50px;
 	width: 50px;
-	background-color: #FF0000;
 	position: absolute;
 }
